WORKING! order, pos, & window localStorage

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,10 @@ html {
   background-color: #c0c0c0;
 }
 
+.yellow{
+  background-color: #fcfce2;
+}
+
 .pop-border-main{
   box-shadow:
   -1px -1px 0px 1px #fffffe, 
