--- a/src/component/windows/windows.scss
+++ b/src/component/windows/windows.scss
@@ -4,9 +4,7 @@
   right: 0;
   margin: 0 auto;
   width:fit-content;
-  resize: both;
-  min-width: 150px;
-  min-height: 100px;
+  min-width: fit-content;
   overflow: auto;
   .header{
       padding:2px 5px;
@@ -18,6 +16,28 @@
   .header.top{
       background-color: #000080;
       color:white;
+  }
+  .main-content{
+    max-width:600px;
+    width:600px;
+    padding:25px;
+    margin:unset;
+    .title{
+      width:fit-content;
+      color:black !important;
+    }
+    .main{
+      display:flex;
+      .left, .right{
+        padding:10px;
+      }
+      .left{
+        width:70%;
+      }
+      .right{
+        width:30%;
+      }
+    }
   }
 }
 
