--- a/src/component/menu/menu.scss
+++ b/src/component/menu/menu.scss
@@ -16,12 +16,14 @@
       width: 100%;
       padding: 5px;
 
-      cursor: pointer;
       .text{
         padding: 6px;
       }
       .underline{
         border-bottom:1px solid black;
+      }
+      .Icon{
+        margin:0 10px;
       }
     }
     :hover {
