changed to using react-draggable

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,10 @@ html {
   background-color: #fcfce2;
 }
 
+.darker{
+  background-color: #b3b3b3;
+}
+
 .pop-border-main{
   box-shadow:
   -1px -1px 0px 1px #fffffe, 
