--- a/src/component/windows/windows.scss
+++ b/src/component/windows/windows.scss
@@ -1,8 +1,7 @@
 .window {
   position: absolute;
   left: 0;
-  right: 0;
-  top: 50px;
+  top: 0;
   margin: 0 auto;
   width:fit-content;
   min-width: fit-content;
@@ -11,7 +10,6 @@
       padding:2px 5px;
       display:flex;
       font-size: 15px;
-      pointer-events: none;
       background-color: #808080;
   }
   .header.top{
@@ -45,6 +43,7 @@
 }
 
 .closeBtn{
+  margin-top:5px;
   pointer-events: all;
   position:absolute;
   right:3px;
